# centralized-ledger

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
server/: Cargo.toml  ledger.txt
server/usr_dir/: Luke
